# rufugio_hackathon

./: QUICKSTART.md  README.md  VERSION.txt  pyproject.toml  requirements.txt  submission.py
docs/: ALLOWED_PACKAGES.md  CLAUDE_INPUT.md  OPTIMIZATION_FINDINGS.md
examples/: baseline_submission.py  basic_greedy_submission.py  wide_avenues_layout_submission.py
layouts/: canonical_layout.json  wide_avenues_layout.json
outputs/: result.json
refugio_starter_kit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/: check_submission.bat  check_submission.py  check_submission.sh  make_replay.bat  make_replay.sh  run_local.bat  run_local.sh  serve_viewer.bat  serve_viewer.py  serve_viewer.sh  validate_layout_json.bat  validate_layout_json.sh
viewer/: index.html  replay-viewer.js  style.css  warehouse-render.js
warehouse/: __init__.py  actions.py  baseline_agent.py  debug_scenarios.py  eval_runner.py  evaluation.py  layout.py  local_runner.py  observation.py  replay.py  simulation.py  state.py  submission_loader.py  targets.py  validate_layout.py
warehouse_api/: __init__.py
