[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "refugio-starter-kit"
version = "0.1.0"
description = "Local starter kit for the REFUGIO Warehouse Challenge"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["warehouse", "warehouse_api"]
